# ParcelOne

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  bhulekh_scraper.py  captcha_solver.py  igr_freesearch_scraper.py  inspect_site.py  main.py  netlify.toml  playwright_launch_args.py  pyproject.toml  render.yaml  requirements.txt  scraper.py  server.py  tmp_headed_e2e_run.py  tmp_run_full_flow.py
.githooks/: pre-push
api/: app.py  auth.py  database.py  ecourts_api_client.py  land_case_flow.py  land_case_worker.py  location_labels.py  models.py  schemas.py  worker.py
api/routes/: cases.py  jobs.py  workflows.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/: build_bhulekh_catalog.py  build_igr_location_map.py  local_smoke_check.sh  run_igr_headed.py
static/: _legacy_jobs.html  _legacy_jobs.js  app.js  index.html  style.css
tests/: conftest.py  test_api_cases.py  test_api_jobs.py  test_auth.py  test_auth_edge_cases.py  test_auth_frontend_contract.py  test_auth_helpers.py  test_bhulekh_catalog.py  test_bhulekh_scraper.py  test_captcha_solver.py  test_cors.py  test_database.py  test_ecourts_api_client.py  test_frontend_playwright.py  test_frontend_react_contract.py  test_frontend_spa_integration.py  test_frontend_static.py  test_hybrid_scraper.py  test_igr_freesearch_scraper.py  test_land_case_flow.py  test_land_case_worker.py  test_location_labels.py  test_property_search_form.py  test_schemas.py  test_scraper_parsing.py  test_worker.py  test_workflow_api.py  test_workflow_artifacts_route.py
(+25 files in other folders)
